public/css/style.css
/********************/
/**  Global rules  **/
/********************/

* {
  box-sizing: border-box;
  font-family: Roboto, sans-serif;
}

code, tt {
  font-family: 'Roboto Mono', monospace;
}

body {
  margin: 0px;
  min-height: 100vh;
  color:var(--text-dark);
  background: var(--background);
}

/**************/
/**  Header  **/
/**************/
#header {
  background-color: var(--header);
}

#header > * {
  display: inline-block;
  vertical-align: middle;
}

#header img {
  margin: 20px;
  width: 50px;
}

/**************/
/**  Layout  **/
/**************/
.container {
  margin: 30px 100px;
}

.row, .column {
  display: flex;
  justify-content: center;
}

.row {
  flex-direction: row;
}

.column {
  flex-direction: column;
}

.row > *, .column > * {
  flex: 1;
}

.left {
  text-align: left;
}

.center {
  text-align: center;
}

.right {
  text-align: right;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.card {
  background-color: var(--card-background);
  border-radius: 5px;
  box-shadow: 0px 3px 3px var(--card-shadow);
  padding: 30px;
}

.modal {
  box-sizing: border-box;
  max-height: 80vh;
  max-width: 80vw;
  overflow: auto;
  position: fixed;
  top: 10%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1000;
}

.modal-close {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0px;
  position: absolute;
  top: 5px;
  right: 5px;
}

.modal-close > i {
  color: var(--modal-close-btn);
}

a.hidden {
  color: inherit;
  text-decoration: inherit;
}

button.hidden {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0px;
}

div.hidden {
  display: none;
}

table.dual-table td {
  white-space: nowrap;
}

table.dual-table td:first-child {
  text-align: left;
}

table.dual-table td:last-child {
  text-align: right;
}

.title {
  margin-bottom: 0px;
}

.subtitle {
  color: var(--text-medium);
  font-weight: normal;
  margin-top: 0px;
}

/***************/
/**  Toolbar  **/
/***************/
#toolbar {
  background-color: var(--toolbar-background);
  height: 26px;
}

#toolbar .dropdown {
  display: inline-block;
  position: relative;
}

#toolbar button {
  background: none;
  border: none;
  color:var(--text-dark);
}

#toolbar .dropdown > button {
  padding: 5px 10px;
}

#toolbar .dropdown > button:hover {
  background-color: var(--toolbar-dropdown-hover);
}

#toolbar .dropdown > button > a {
  color: black;
  text-decoration: none;
}

#toolbar .dropdown > .dropdown-menu {
  box-shadow: 0px 3px 3px var(--toolbar-dropdown-menu-shadow);
  position: absolute;
  z-index: 1;
}

#toolbar .dropdown > .dropdown-menu > .menu-option {
  background-color: var(--toolbar-dropdown-menu-option);
  box-sizing: border-box;
  color: var(--text-dark);
  cursor: default;
  display: block;
  font-size: 10pt;
  min-width: 100px;
  padding: 5px 10px;
  text-align: left;
  text-decoration: none;
  white-space: nowrap;
  width: 100%;
}

#toolbar .dropdown > .dropdown-menu > .menu-option:hover {
  background-color: var(--toolbar-dropdown-menu-option-hover);
  color: var(--text-light);
}

#toolbar .dropdown > .dropdown-menu > hr {
  border: none;
  border-top: 1px solid var(--toolbar-dropdown-menu-dividing-line);
  margin: 0px;
}

/*************/
/**  Forms  **/
/*************/
form.large-form .field {
  margin: 10px auto;
  width: 300px;
}

form.large-form label {
  font-size: 10pt;
}

form.large-form input {
  width: 300px;
}

.field-required label::after {
  color: var(--field-required);
  content: "*";
}

/***************/
/**  Buttons  **/
/***************/
.btn {
  border: 1px solid;
  border-bottom-width: 3px;
  border-radius: 5px;
  cursor: pointer;
  padding: 5px 10px;
  transition: all 0.1s ease-in;
}

.btn:hover {
  filter: brightness(0.95);
}

.btn:active {
  border-top-width: 3px;
  border-bottom-width: 1px;
}

.btn-primary {
  background-color: var(--primary);
  border-color: var(--primary-dark);
}

